slide/src/test/ui/error/expected_close_bracket_eof.slide
===in
1 + [2 * 3
===in

~~~stdout
~~~stdout

~~~stderr
error: Expected `]`, found end of file
  |
1 | 1 + [2 * 3 
  |           ^ expected closing `]`
  |     - help: opening `[` here
  |

~~~stderr

~~~exitcode
1
~~~exitcode
